add sign up form

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,12 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav
+      ul 
+        li 
+          a(href='/signup') Sign Up
+        li 
+          a(href='/login') Login
+        li 
+          a(href='/') Home
     block content
