--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,9 @@
 extends layout
 
 block content
-  if currentUser 
-    h1 Welcome #{currentUser.firstname}
-    p Member since:  #{currentUser.age}
-    a(href='/messages/create') New Message
+  div 
+    if messages  && messages.length > 0
+      for message in messages 
+        p !{message.title}
+    else 
+      p no messages
