--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet")
   body
     nav
       ul 
@@ -19,4 +20,27 @@ html
           li 
             a(href='/logout') Log out
 
+          li  Welcome #{currentUser.firstname}!
+
+          li 
+            a(href='/messages/create') New Message
+
+
     block content
+
+  script(src="https://cdn.quilljs.com/1.3.6/quill.js")
+  script(src="/javascripts/quill-textarea.js")
+    script.
+      quilljs_textarea('.quilljs-textarea', {
+        modules: {
+          toolbar: [
+            ['bold', 'italic', 'underline'], // toggled buttons
+            [{ list: 'ordered' }, { list: 'bullet' }],
+            [{ header: [1, 2, 3, 4, 5, 6, false] }],
+            [{ color: [] }, { background: [] }], // dropdown with defaults from theme
+            [{ align: [] }],
+          ],
+        },
+        theme: 'snow',
+      })();
+
