--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,9 +34,10 @@ html
       quilljs_textarea('.quilljs-textarea', {
         modules: {
           toolbar: [
-            ['bold', 'italic', 'underline'], // toggled buttons
+            ['bold', 'italic', 'underline', 'strike'], // toggled buttons
             [{ list: 'ordered' }, { list: 'bullet' }],
-            [{ header: [1, 2, 3, 4, 5, 6, false] }],
+            [{ 'size': ['small', 'large'] }],
+            [{ header: [] }],
             [{ color: [] }, { background: [] }], // dropdown with defaults from theme
             [{ align: [] }],
           ],
