--- a/views/index.pug
+++ b/views/index.pug
@@ -5,5 +5,7 @@ block content
     if messages  && messages.length > 0
       for message in messages 
         p !{message.title}
+        p !{message.content}
+        p #{message.age}
     else 
       p no messages
