--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,33 +15,27 @@ html
           li 
             a(href='/') Home
         else 
+          li  Welcome #{currentUser.firstname}!
           li 
             a(href='/') Home
           li 
             a(href='/logout') Log out
 
-          li  Welcome #{currentUser.firstname}!
-
           li 
             a(href='/messages/create') New Message
+
+          if currentUser.membership_status == 'admin'
+            li
+              a(href='/admin') Admin Panel
+
+          if currentUser.membership_status == 'user'
+          li
+            a(href='/users/upgrade') Upgrade Membership
 
 
     block content
 
   script(src="https://cdn.quilljs.com/1.3.6/quill.js")
   script(src="/javascripts/quill-textarea.js")
-    script.
-      quilljs_textarea('.quilljs-textarea', {
-        modules: {
-          toolbar: [
-            ['bold', 'italic', 'underline', 'strike'], // toggled buttons
-            [{ list: 'ordered' }, { list: 'bullet' }],
-            [{ 'size': ['small', 'large'] }],
-            [{ header: [] }],
-            [{ color: [] }, { background: [] }], // dropdown with defaults from theme
-            [{ align: [] }],
-          ],
-        },
-        theme: 'snow',
-      })();
+
 
