--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,7 +30,7 @@ html
 
           if currentUser.membership_status == 'user'
           li
-            a(href='/users/upgrade') Upgrade Membership
+            a(href='/upgrade') Upgrade Membership
 
 
     block content
