--- a/views/upgrade_form.pug
+++ b/views/upgrade_form.pug
@@ -1,11 +1,8 @@
 extends layout 
 
 block content 
-  form(method='post' action='/users/upgrade')
-    for prompt in prompts   
-      div 
-        label(for='prompt._id') Question #{prompts.indexOf(prompt) + 1}
-        p=prompt.question
-        input(type='text' name='prompt._id') 
+  form(method='post' action='/upgrade')
+    label(for='password') Enter password
+    input(type='text' name='password') 
 
     button(type="submit") Submit
