--- a/views/upgrade-form.pug
+++ b/views/upgrade-form.pug
@@ -6,3 +6,8 @@ block content
     input(type='text' name='password') 
 
     button(type="submit") Submit
+  
+  if errors 
+    ul 
+      for error in errors   
+        li= error.msg
