--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  if msg 
+    h2=msg
   div 
     if messages  && messages.length > 0
       for message in messages 
