move quill script to message-form

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  if msg 
-    h2=msg
+  //- if msg 
+  //-   h2=msg
+    
   div 
     if messages  && messages.length > 0
       for message in messages 
