--- a/views/message-form.pug
+++ b/views/message-form.pug
@@ -11,6 +11,6 @@ block content
 
     button(type="submit") Submit
 
-  
 
-  
+  script(src="https://cdn.quilljs.com/1.3.6/quill.js")
+  script(src="/javascripts/quill-textarea.js")
