--- a/views/index.pug
+++ b/views/index.pug
@@ -4,12 +4,25 @@ block content
   //- if msg 
   //-   h2=msg
     
-  div 
-    if messages  && messages.length > 0
+  div(class='flex flex-col mt-16 mx-24 grow')
+    if msg 
+      div(class="alert alert-info shadow-lg mb-5")
+        div
+          svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current flex-shrink-0 w-6 h-6")
+            path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z")
+          span #{msg}
+
+
+    if messages.length > 0
       for message in messages 
-        p !{message.title}
-        p !{message.content}
-        p #{message.age}
+        div(class='w-100')
+          p(class='text-xl text-primary') #{message.title}
+          div(class='text-sm my-3') 
+            p !{message.content}
+          p(class='text-xs text-secondary') Posted by #{currentUser && currentUser.membership_status !== 'user' ? message.user.firstname : 'Anonymous'} #{message.age}
+          if messages.indexOf(message) !== messages.length - 1 
+            div(class="divider my-5")
+
     else 
       p no messages
   
