--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/overrides.css')
     link(href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet")
   body
-    div(class='body-wrapper')
+    div(class='flex')
       nav(class='drawer w-80')
         ul(class="menu p-4 overflow-y-auto w-80 bg-neutral text-base-content")
           li(class=`${currentUser ? 'flex-row justify-between' : ''}`) 
