--- a/views/index.pug
+++ b/views/index.pug
@@ -5,12 +5,18 @@ block content
   //-   h2=msg
     
   div(class='flex flex-col mt-16 mx-24 grow')
-    if msg 
+    if alert 
       div(class="alert alert-info shadow-lg mb-5")
         div
           svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current flex-shrink-0 w-6 h-6")
             path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z")
-          span #{msg}
+          span= alert
+    if error 
+      div(class="alert alert-error shadow-lg mb-5")
+        div
+          svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current flex-shrink-0 w-6 h-6")
+            path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z")
+          span error
 
 
     if messages.length > 0
@@ -24,8 +30,6 @@ block content
             div(class="divider my-5")
 
     else 
-      p no messages
+      div(class='w-100')
+        p(class='text-xl text-primary') No messages
   
-  if error 
-    ul 
-      li= error
