--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/overrides.css')
     link(href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet")
   body
+    script 0
     div(class='flex')
       nav(class='drawer w-80')
         ul(class="menu p-4 overflow-y-auto w-80 bg-neutral text-base-content")
@@ -24,6 +25,7 @@ html
                   circle(cx="12" cy="12" r="9")
                   circle(cx="12" cy="10" r="3")
                   path(d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855")
+                  
           div(class="divider")
 
           if !currentUser
