--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1240,6 +1240,9 @@ html {
 .input[list]::-webkit-calendar-picker-indicator {
   line-height: 1em;
 }
+.input-bordered {
+  --tw-border-opacity: 0.2;
+}
 .input:focus {
   outline: 2px solid hsla(var(--bc) / 0.2);
   outline-offset: 2px;
@@ -1603,6 +1606,10 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .mt-16 {
   margin-top: 4rem;
 }
@@ -1611,6 +1618,9 @@ html {
 }
 .mt-auto {
   margin-top: auto;
+}
+.mt-10 {
+  margin-top: 2.5rem;
 }
 .block {
   display: block;
@@ -1642,6 +1652,9 @@ html {
 .w-full {
   width: 100%;
 }
+.max-w-xs {
+  max-width: 20rem;
+}
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -1659,6 +1672,11 @@ html {
 }
 .justify-between {
   justify-content: space-between;
+}
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 .overflow-y-auto {
   overflow-y: auto;
