--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1240,9 +1240,6 @@ html {
 .input[list]::-webkit-calendar-picker-indicator {
   line-height: 1em;
 }
-.input-bordered {
-  --tw-border-opacity: 0.2;
-}
 .input:focus {
   outline: 2px solid hsla(var(--bc) / 0.2);
   outline-offset: 2px;
@@ -1652,9 +1649,6 @@ html {
 .w-full {
   width: 100%;
 }
-.max-w-xs {
-  max-width: 20rem;
-}
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -1680,6 +1674,9 @@ html {
 }
 .overflow-y-auto {
   overflow-y: auto;
+}
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 .bg-neutral {
   --tw-bg-opacity: 1;
