--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1649,6 +1649,9 @@ html {
 .w-80 {
   width: 20rem;
 }
+.w-1\/3 {
+  width: 33.333333%;
+}
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -1681,6 +1684,10 @@ html {
 .bg-neutral {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--n) / var(--tw-bg-opacity));
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .stroke-current {
   stroke: currentColor;
