--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet")
+    link(rel='stylesheet', href='/stylesheets/overrides.css')
   body
     script 0
     div(class='flex')
