add validation to message form

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     
-  div(class='flex flex-col mt-16 mx-24 grow')
+  main(class='flex flex-col mt-16 mx-24 grow')
     if alert 
       div(class="alert alert-info shadow-lg mb-5")
         div
