--- a/public/stylesheets/overrides.css
+++ b/public/stylesheets/overrides.css
@@ -20,3 +20,21 @@
 .ql-snow .ql-stroke.ql-fill {
   fill: white;
 }
+
+pre {
+  background-color: hsl(var(--n));
+  width: fit-content;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  color: hsl(var(--in));
+}
+
+ol {
+  list-style-type: decimal;
+  margin-left: 1rem;
+}
+
+main ul {
+  list-style-type: disc;
+  margin-left: 1rem;
+}
