--- a/views/index.pug
+++ b/views/index.pug
@@ -20,12 +20,28 @@ block content
     if messages.length > 0
       for message in messages 
         div(class='w-100')
-          p(class='text-xl text-primary') #{message.title}
-          div(class='text-sm my-3') 
-            p !{message.content}
-          p(class='text-xs text-secondary') Posted by #{currentUser && currentUser.membership_status !== 'user' ? message.user ? message.user.firstname : 'deleted user' : 'Anonymous'} #{message.age}
+          div(class='flex justify-between')
+            div
+              p(class='text-xl text-primary') #{message.title}
+              div(class='text-sm my-3') 
+                p !{message.content}
+              p(class='text-xs text-secondary') Posted by #{currentUser && currentUser.membership_status !== 'user' ? message.user ? message.user.firstname : 'deleted user' : 'Anonymous'} #{message.age} 
+
+            div
+              if currentUser && currentUser.membership_status == 'admin'
+                form(method='POST' action='/messages/delete/' + message._id)
+                  button(type='submit' class='btn')
+                    svg(xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round")
+                      path(stroke="none" d="M0 0h24v24H0z" fill="none")
+                      line(x1="4" y1="7" x2="20" y2="7")
+                      line(x1="10" y1="11" x2="10" y2="17")
+                      line(x1="14" y1="11" x2="14" y2="17")
+                      path(d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12")
+                      path(d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3")
           if messages.indexOf(message) !== messages.length - 1 
             div(class="divider my-5")
+
+         
 
     else 
       div(class='w-100')
