--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
     
   main(class='flex flex-col mt-16 mx-24 grow')
     if alert 
-      div(class="alert alert-info shadow-lg mb-5")
+      div(class="alert alert-info shadow-lg mb-10")
         div
           svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current flex-shrink-0 w-6 h-6")
             path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z")
@@ -17,7 +17,7 @@ block content
           span error
 
 
-    if messages.length > 0
+    if currentUser && messages.length > 0
       for message in messages 
         div(class='w-100')
           div(class='flex justify-between')
@@ -41,9 +41,15 @@ block content
           if messages.indexOf(message) !== messages.length - 1 
             div(class="divider my-5")
 
-         
-
+    else if !currentUser 
+      div(class="card bg-neutral shadow-xl mx-auto my-10")
+        div(class="card-body")
+          h2(class="card-title  text-primary mb-5") Welcome to the club
+          p Log in to view messages!
+          div(class="card-actions justify-end")
+            a(href='/login' class="btn btn-primary mt-10") Log in
+            a(href='/signup' class="btn btn-secondary mt-10") Sign Up
+  
     else 
       div(class='w-100')
         p(class='text-xl text-primary') No messages
-  
