--- a/views/login-form.pug
+++ b/views/login-form.pug
@@ -1,7 +1,7 @@
 extends layout 
 
 block content 
-  div(class="card w-96 bg-neutral shadow-xl mx-auto my-auto h-96")
+  div(class="card w-96 bg-neutral shadow-xl mx-auto mt-10 h-96")
     div(class="card-body")
       h2(class="card-title  text-primary mb-5") Log In
       form(method='POST' action='/login' class="form-control flex flex-col h-full")
