--- a/views/message-form.pug
+++ b/views/message-form.pug
@@ -1,7 +1,7 @@
 extends layout 
 
 block content 
-  div(class="card bg-neutral shadow-xl mx-auto my-auto w-1/3")
+  div(class="card bg-neutral shadow-xl mx-auto mt-10 w-1/3 h-fit")
     div(class="card-body")
       h2(class="card-title text-primary") New Message
       
