--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,7 +1,7 @@
 extends layout 
 
 block content
-  div(class="card w-96 bg-neutral shadow-xl mx-auto my-auto")
+  div(class="card w-96 bg-neutral shadow-xl mx-auto my-10 h-fit")
     div(class="card-body")
       h2(class="card-title  text-primary mb-5") Update Upgrade Password
       
