--- a/views/signup-form.pug
+++ b/views/signup-form.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content 
-  div(class="card bg-neutral shadow-xl mx-auto my-auto")
+  div(class="card bg-neutral shadow-xl mx-auto my-10 h-fit")
     div(class="card-body")
       h2(class="card-title  text-primary mb-5") Sign Up
       form(method="POST" action='/signup' class='form-control space-y-1')
