--- a/views/upgrade-form.pug
+++ b/views/upgrade-form.pug
@@ -1,7 +1,7 @@
 extends layout 
 
 block content 
-  div(class="card w-96 bg-neutral shadow-xl mx-auto my-auto")
+  div(class="card w-96 bg-neutral shadow-xl mx-auto my-10")
     div(class="card-body")
       h2(class="card-title  text-primary") Upgrade
       
