--- a/views/admin.pug
+++ b/views/admin.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   div(class="card w-96 bg-neutral shadow-xl mx-auto my-10 h-fit")
     div(class="card-body")
-      h2(class="card-title  text-primary mb-5") Update Upgrade Password
+      h2(class="card-title  text-primary mb-5") Update Membership Password
       
       form(method='POST' action='/admin' class="form-control flex flex-col h-full")
         
