--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title Members Only
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/overrides.css')
